[project]
name = "pywar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.5",
    "django-types>=0.22.0",
]
classifiers = ["Private :: Do Not Upload"]

# Set of information about UV recommended .toml for packages apps:
# https://github.com/astral-sh/uv/issues/7576


[project.scripts]
# For some reason this script is not working:
# Instead, call python -m pywar directly
pywar = "pywar:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# BELOW ARE REQUIRED FOR PACKAGED APPS:
[tool.hatch.build.targets.wheel]
packages = ["src/pywar"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "assertpy>=1.1",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-django>=4.11.1",
    "ruff>=0.12.7",
    "types-assertpy>=1.1.0.20250502",
]


# LINTING CONFIGURATION:
[tool.ruff]
line-length = 100

[tool.coverage.report]
exclude_also = [
    'def __repr__',
    'if self.debug:',
    'if settings.DEBUG',
    'raise AssertionError',
    'raise NotImplementedError',
    'if 0:',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:',
    'class .*\bProtocol\):',
    '@(abc\.)?abstractmethod',
]
